force-app/main/default/objects/custom_create256__c/custom_create256__c.object-meta.xml
<CustomObject>
    <label>Custom created object256</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects256</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>