force-app/main/default/objects/custom_create256__c/fields/custom_create_256field562__c.field-meta.xml
<CustomField>
    <fullName>custom_create_256field562__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 256field562</label>
    <type>Checkbox</type>
</CustomField>